# opendpm

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  PUBLISHING.md  README.md  pyproject.toml
.github/scripts/: get-new-download-urls.sh
.github/workflows/: build-all-versions.yml  build-database-artifacts.yml  build-database-release.yml  build-database.yml  convert-and-release.yml  convert-database-artifacts.yml  download-database.yml  generate-schema.yml  get-new-download-urls.yml  migrate-database.yml  publish-database-files.yml  publish-dpm-toolkit.yml  publish-dpm2.yml  publish-opendpm.yml  test-conversion.yml
config/: sources.toml
downloads/: report.html
opendpm/: __init__.py  cli.py  download.py  scraper.py  versions.py  versions.toml
opendpm/convert/: __init__.py  generation.py  main.py  processing.py  transformations.py  utils.py
projects/archive/: README.md  pyproject.toml
projects/archive/src/archive/: __init__.py  download.py  versions.py  versions.toml
projects/compare/: README.md  pyproject.toml
projects/compare/src/compare/: __init__.py  comparator.py  data.py  diff.py  inspector.py  main.py  report.py  schema.py  types.py
projects/compare/src/compare/templates/: base.html  comparison_report.html  json_report.html  json_styles.html  report.html  scripts.html  scripts.js  styles.css  styles.html  table_comparison.html
projects/convert/: pyproject.toml
projects/convert/src/convert/: __init__.py  config.py  exceptions.py  generation.py  main.py  processing.py  progress.py  transformations.py  utils.py
projects/dpm2/: README.md  pyproject.toml
projects/dpm2/src/dpm2/: __init__.py  utils.py
projects/migrate/: README.md  pyproject.toml
projects/migrate/src/migrate/: __init__.py  main.py  processing.py
projects/schema/: README.md  pyproject.toml
projects/schema/src/schema/: __init__.py  generation.py  main.py
projects/scrape/: README.md  pyproject.toml
projects/scrape/src/scrape/: __init__.py  scraper.py
src/: __main__.py
src/archive/: __init__.py
src/cli/: __init__.py  cli.py
src/convert/: __init__.py
src/crawler/: __init__.py  scraper.py
src/downloader/: __init__.py  fetcher.py
src/dpm/: cli.py  convert.py  deploy.py  download.py  main.py
src/dpm/scripts/: convert_dbs.py  download_dbs.py
src/dpm2/: README.md  __init__.py  pyproject.toml  utils.py
src/dpm_toolkit/: cli.py
src/open_dpm/: convert.py  download.py
src/opendpm/: __init__.py  __main__.py  cli.py  convert.py  download.py  scraper.py  sources.toml
src/opendpm/convert/: __init__.py  generation.py  main.py  processing.py  transformations.py  utils.py
