[project]
name = "opendpm"
version = "0.1.0"
description = "Open-source tools and models for working with DPM databases"
authors = [
    { name = "Jim Lundin", email = "jimeriklundin@gmail.com" }
]
dependencies = [
    "pyodbc>=5.1.0",
    "sqlalchemy>=2.0.25",
    "sqlalchemy-access>=2.0.0",
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.13"

[project.scripts]
opendpm = "opendpm.cli:main"

[tool.ruff]
unsafe-fixes = true

[tool.ruff.lint]
fixable = ["ALL"]
select = ["ALL"]
ignore = ["T201"]

[tool.mypy]
strict = true

[tool.pyright]
typeCheckingMode = "strict"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.4",
    "types-requests>=2.32.0.20250328",
]

[tool.hatch.build.targets.wheel]
packages = ["opendpm"]

[tool.hatch.metadata]
allow-direct-references = true
