[project]
name = "opendpm"
version = "0.1.0"
description = "Open-source tools and models for working with DPM databases"
authors = [
    { name = "Jim Lundin", email = "jimeriklundin@gmail.com" }
]
dependencies = [
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.13"

[project.scripts]
opendpm = "opendpm.cli:main"

[project.optional-dependencies]
scrape = [
    "beautifulsoup4>=4.13.4",
]
convert = [
    "pyodbc>=5.2.0",
    "sqlalchemy>=2.0.37",
    "sqlalchemy-access>=2.0.3",
]

[tool.ruff]
unsafe-fixes = true

[tool.ruff.lint]
fixable = ["ALL"]
select = ["ALL"]
ignore = ["T201"]

[tool.mypy]
strict = true

[tool.pyright]
typeCheckingMode = "strict"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.4",
    "types-beautifulsoup4>=4.12.0.20250204",
    "types-requests>=2.32.0.20250328",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true
