[project]
name = "opendpm"
version = "2025.5.7"
description = "Open-source tools and models for working with DPM databases"
authors = [
    { name = "Jim Lundin", email = "jimeriklundin@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.13"

dependencies = ["archive"]

[project.scripts]
opendpm = "opendpm.cli:main"

[project.optional-dependencies]
scrape = ["scrape"]
convert = ["convert"]

[tool.ruff]
unsafe-fixes = true

[tool.ruff.lint]
fixable = ["ALL"]
select = ["ALL"]
ignore = ["T201"]

[tool.mypy]
strict = true

[tool.pyright]
typeCheckingMode = "strict"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.4",
    "types-beautifulsoup4>=4.12.0.20250204",
    "types-requests>=2.32.0.20250328",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opendpm"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.workspace]
members = ["projects/*"]

[tool.uv.sources]
archive = { workspace = true }
convert = { workspace = true }
scrape = { workspace = true }
