[project]
name = "archive"
version = "0.1.0"
description = "A tool for listing, downloading and verifying dpm publications"
authors = [{ name = "Jim Lundin", email = "jimeriklundin@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["requests>=2.32.3"]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
