[project]
name = "schema"
version = "0.1.0"
description = "SQLAlchemy schema generation from Access databases"
authors = [{ name = "Jim Lundin", email = "jimeriklundin@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["sqlalchemy>=2.0.37"]

[tool.ruff]
unsafe-fixes = true

[tool.ruff.lint]
fixable = ["ALL"]
select = ["ALL"]
ignore = ["T201"]

[tool.mypy]
strict = true

[tool.pyright]
typeCheckingMode = "strict"
