[project]
name = "scrape"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jim Lundin", email = "jimeriklundin@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
