[project]
name = "dpm2"
dynamic = ["version"]
description = "Data Point Model 2 artifacts"
authors = [
    { name = "Jim Lundin", email = "jimeriklundin@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.13"

dependencies = [
    "sqlalchemy>=2.0.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dpm2"]

[tool.hatch.metadata]
allow-direct-references = true
